add skew to pplot

--- a/probplot.html
+++ b/probplot.html
@@ -100,6 +100,7 @@
             <li>Several distributions can be plotted on the same plot for comparison.</li>
             <li>The median is where the data intersects the 50% point.</li>
             <li>The standard deviation is proportional to the slope of the data.  (The actual standard deviation is roughly the 84% point minus the 50% point.)</li>
+            <li>The linearity of the data represents how well the data fits the chosen distribution.</li>
         </ol>
         Here is how this example data was generated:
         <pre>
