normal probability paper

--- a/probplot.html
+++ b/probplot.html
@@ -46,12 +46,19 @@
         on a straight line, <em>the position</em> of the plotted point is the inverse
         cumulative distribution function (e.g. number of standard deviations
         away from the mean) and the axis of the plot is percentage (to ease in
-        interpretation).
+        interpretation).  Equivalently, this can be summarized as plotting the probability 
+        estimate vs the data point on "Normal Probability Graph Paper" as shown in Figure 3.
     </p>
+    <figure>
+        <img src="imgs/figure9a-probgraphpaper.png" width="250px">
+        <figcaption>
+            Figure 3 - "Normal Probability Graph Paper"  (Note: the x and y axes are swapper here from what's shown in Figure 4.)
+        </figcaption>
+    </figure>
     <figure>
         <img src="imgs/probplot.png" width="350px">
         <figcaption>
-            Figure 3 - Probability plot of the same two data distributions
+            Figure 4 - Probability plot of the same two data distributions
             plotted above as well as a skewnorm distribution to illustrate the
             non-linearity.
         </figcaption>
