add jupyterlite site

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <ul>
         <li><a href="probplot.html">Presenting Statistical Distributions</a></li>
         <li><a href="https://sbmueller.github.io/nohello/">Please Don’t Just Say Hello In Chat</a></li>
+        <li><a href="https://mikessut.github.io/jupyterlite/">My Jupyterlite</a>
     </ul>
 </body>
