twilio sms terms

--- a/sms_terms.html
+++ b/sms_terms.html
@@ -1,10 +1,11 @@
 <html>
-    <h1>Terms and Conditions</h1>
+    <h1>Terms and Conditions for Clearbox Solutions Notificaiton SMS List</h1>
     <ol>
-        <li>EAA43 Scholar Notificaiton SMS List</li>
-        <li>This is a simple list to notify scholars of upcoming deadlines and to remind them of actions they must take</li>
-        <li>You can cancel the SMS service at any time. Just text “STOP” to the short code. After you send the SMS message “STOP” to us, we will send you an SMS message to confirm that you have been unsubscribed. After this, you will no longer receive SMS messages from us. If you want to join again, just sign up as you did the first time and we will start sending SMS messages to you again.</li>
-        <li>If you are experiencing issues with the messaging program you can reply with the keyword HELP for more assistance, or you can get help directly at eaa43scholarship@gmail.com.</li>
+        <li>This is a simple SMS notification service to send reminders of upcoming events and meetings.</li>
+        <li>You can cancel the SMS service at any time. Just text “STOP”. After you send the SMS message “STOP” to us, we will send you an SMS message to confirm that you have been unsubscribed. After this, you will no longer receive SMS messages from us. If you want to join again, just sign up as you did the first time and we will start sending SMS messages to you again.</li>
+        <li>You can subscribe to the service by going to <a href="sms_form.html">this form.</a></li>
+        <li>You can also subscribe by texting "SUBSCRIBE" to (720) 552-5200. We will internally verify your number as a member and then add you to the service.</li>
+        <li>If you are experiencing issues with the messaging program you can reply with the keyword HELP for more assistance.</li>
         <li>Carriers are not liable for delayed or undelivered messages</li>
         <li>As always, message and data rates may apply for any messages sent to you from us and to us from you. You will receive somewhere around 10 messages a month. If you have any questions about your text plan or data plan, it is best to contact your wireless provider.</li>
         <li>If you have any questions regarding privacy, please read our privacy policy below.
